# sml_mcps

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/plans/: UNIX_TRANSPORT.md
examples/: unix_server.rs
src/: bridge.rs  lib.rs
src/transport/: mod.rs  stdio.rs  unix.rs  unix_server.rs
tests/: daemon_lifecycle.rs
