[package]
name = "sml_mcps"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "Small MCP Server - sync, no tokio, just works"
license = "MIT"
repository = "https://github.com/MemoryCo/sml_mcps"
readme = "README.md"
keywords = ["mcp", "server", "sync", "claude", "anthropic"]
categories = ["network-programming", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
base64 = "0.22"

# JSON Schema generation for tools
schemars = { version = "1.0", optional = true }

# JWT validation for hosted auth
jsonwebtoken = { version = "9", optional = true }

# HTTP server (tiny, sync, no deps)
tiny_http = { version = "0.12", optional = true }

# Unix daemon syscalls (fork, setsid, dup2, kill) for UnixServer::serve_daemon.
# Unix-only, always available there - no feature flag (matches #[cfg(unix)] gating).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["schema"]
schema = ["dep:schemars"]
http = ["dep:tiny_http"]
auth = ["dep:jsonwebtoken"]
hosted = ["http", "auth"]

[dev-dependencies]

[[example]]
name = "simple"

[[example]]
name = "http_server"
required-features = ["http"]

[[example]]
name = "http_auth"
required-features = ["hosted"]

# Unix socket daemon/shim example - unix-only, no extra features needed
[[example]]
name = "unix_server"
